--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,21 +9,24 @@ project(tinyrenderer LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}) # Set the output directory for the executable file
+
 option(iwyu "Run include-what-you-use")
 if(iwyu)
   find_program(IWYU_EXE NAMES include-what-you-use REQUIRED)
   set(CMAKE_CXX_INCLUDE_WHAT_YOU_USE ${IWYU_EXE})
 endif()
 
-if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU|Intel")
+if(CMAKE_CXX_COMPILER_ID MATCHES "Cla`ng|GNU|Intel")
   add_compile_options(-Wall)
 endif()
 
 find_package(OpenMP COMPONENTS CXX)
 
-set(SOURCES main.cpp model.cpp tgaimage.cpp)
+set(SOURCES demo_drawobj.cpp model.cpp tgaimage.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} PRIVATE $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+# target_compile_options(${PROJECT_NAME} PRIVATE -DDEBUG) # add compile define for debugging
 
 file(GENERATE OUTPUT .gitignore CONTENT "*")
