--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ endif()
 
 find_package(OpenMP COMPONENTS CXX)
 
-set(SOURCES demo_drawobj.cpp model.cpp tgaimage.cpp)
+set(SOURCES demo_drawtriangle.cpp model.cpp tgaimage.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} PRIVATE $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
