reconstruct pipeline based on OOP: Object->Submesh->vertices&indices add comGL(a math and graphic library, not finished yet) support both wireframe and rasterization rendering
legacy files have not removed yet
 Changes to be committed:
	new file:   common.cpp
	new file:   common.h
	new file:   main.cpp
	new file:   mesh.cpp
	new file:   mesh.h
	new file:   object.cpp
	new file:   object.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,11 @@ endif()
 
 find_package(OpenMP COMPONENTS CXX)
 
-set(SOURCES demo_drawobj.cpp demo_drawtriangle.cpp model.cpp tgaimage.cpp)
+set(SOURCES main.cpp object.cpp mesh.cpp common.cpp tgaimage.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} PRIVATE $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 # target_compile_options(${PROJECT_NAME} PRIVATE -DDEBUG) # add compile define for debugging
+# target_compile_options(${PROJECT_NAME} PRIVATE -DWIREFRAME) # add compile define for WIREFRAME RENDERING
 
 file(GENERATE OUTPUT .gitignore CONTENT "*")
